syntax = "proto3";

package tunnel;

option go_package = "router-mesh/peer;tunnel";

service Router {
  rpc ForwardTunnel(TunnelRequest) returns (stream TunnelChunk);
}

service Gateway {
  rpc HandleTunnelStream(TunnelRequest) returns (stream TunnelChunk);
}

message TunnelRequest {
  string stream_id = 1;
  string agent_id = 2;
  string method = 3;
  string path = 4;
  map<string, string> headers = 5;
  bytes body = 6;
}

message TunnelChunk {
  oneof payload {
    TunnelHeaders headers = 1;
    TunnelData data = 2;
    TunnelClose close = 3;
  }
}

message TunnelHeaders {
  int32 status_code = 1;
  map<string, string> headers = 2;
}

message TunnelData {
  bytes body_chunk = 1;
}

message TunnelClose {
  string reason = 1;
}
